# player

./: .gitignore  CMakeLists.txt  LICENSE
fromes/: videoWidget.ui
include/libavcodec/: avcodec.h
include/libavutil/: ffversion.h
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
rcc/: shader.qrc
shader/: video.frag  video.vert
src/: CMakeLists.txt  main.cpp
src/audioPlay/: CAudioPlay.cpp  CAudioPlay.h  CMakeLists.txt  audioPlay.cpp  audioPlay.h
src/audioThread/: CMakeLists.txt  audioThread.cpp  audioThread.h
src/decode/: CMakeLists.txt  decode.cpp  decode.h
src/demux/: CMakeLists.txt  demux.cpp  demux.h
src/demuxThread/: CMakeLists.txt  demuxThread.cpp  demuxThread.h
src/openglWidget/: CMakeLists.txt  openglWidget.cpp  openglWidget.h  videoCall.h  videoWidget.cpp  videoWidget.h
src/resample/: CMakeLists.txt  resample.cpp  resample.h
src/videoThread/: CMakeLists.txt  videoThread.cpp  videoThread.h
